<!--
  ~ Copyright (c) 2018 stanwood Gmbh
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Bitrise Unofficial</string>
    <string name="app_description">Unofficial Bitrise Android client</string>
    <string name="build_status_success">Success</string>
    <string name="build_status_failure">Failure</string>
    <string name="build_status_aborted">Aborted</string>
    <string name="build_status_in_progress">In progress</string>
    <string name="build_triggered_at">Triggered @ %1$s</string>
    <string name="title_logs">Logs</string>
    <string name="title_artifacts">Artifacts</string>
    <string name="artifact_type_file">file</string>
    <string name="artifact_type_apk">APK</string>
    <string name="artifact_type_ipa">IPA</string>
    <string name="new_build_started">Build no. %1$d started.</string>
    <string name="branch">Branch</string>
    <string name="workflow">Workflow</string>
    <string name="start_new_build">Start new build</string>
    <string name="label_token">Token</string>
    <string name="label_login">Login</string>
    <string name="login_instructions">Don\'t have a token? Get it <a href="https://www.bitrise.io/me/profile#/security">here!</a></string>
    <string name="invalid_token">Invalid token</string>
    <string name="default_error_message">Unexpected error</string>
    <string name="error_title">GAME OVER</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="open_repo">Open repo</string>
    <string name="download_error_message">Error while downloading %1$s</string>
    <string name="download_cancelled_message">Download cancelled %1$s</string>
    <string name="download_awaiting_message">Waiting for download. Tap to cancel.</string>
    <string name="share_public_page_title">Share public install url</string>
    <string name="copyright_notice">Bitrise Unofficial Client\nCopyright © 2018 stanwood Gmbh</string>
    <string name="licenses">Licenses</string>
    <string name="contribute">Contribute</string>
    <string name="make_bitrise_better">Make Bitrise Unofficial better</string>
    <string name="open_source_notices">Open source notices</string>
    <string name="label_load_log">Load log</string>
</resources>
